Unwrapped mesh not shown in "UV/Image Editor" when 3D view in "Texture Paint" mode in 2.6.3a #32468

Closed
opened 2012-09-02 18:31:42 +02:00 by HaiMing Weng · 3 comments

%%%set up

  • 3D view
"Texture Paint" mode, "Solid"
  • UV/Image Editor view
select "texture" from the "Browse Image to be linked" drop down list ( texture.png attached )
checked "Enable image painting mode"

Open the attached .blender in 2.6.3a

  • Unwrapped mesh not shown in "UV/Image Editor"
  • It is ONLY shown if 3D view is switched to "Edit" mode

Open the same in 2.6.2

  • Unwrapped mesh is shown

Not sure if the behavior is changed in 2.6.3a on purpose ?

However, the behavior in 2.6.2 does seem better, in that you can paint in both views, with boundary shown

( so far I really like Blender & think it is a great work )

Maybe is there any extra setting in 2.6.3a to make it behave the same ? Please kindly ignore my report & prompt for the option available

%%%

%%%set up - 3D view ``` "Texture Paint" mode, "Solid" ``` - UV/Image Editor view ``` select "texture" from the "Browse Image to be linked" drop down list ( texture.png attached ) checked "Enable image painting mode" ``` Open the attached .blender in 2.6.3a - Unwrapped mesh not shown in "UV/Image Editor" - It is ONLY shown if 3D view is switched to "Edit" mode Open the same in 2.6.2 - Unwrapped mesh is shown Not sure if the behavior is changed in 2.6.3a on purpose ? However, the behavior in 2.6.2 does seem better, in that you can paint in both views, with boundary shown ( so far I really like Blender & think it is a great work ) Maybe is there any extra setting in 2.6.3a to make it behave the same ? Please kindly ignore my report & prompt for the option available %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This is supposed to work, got broken accidentally, fix in svn, thanks for the report.%%%

%%%This is supposed to work, got broken accidentally, fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32468
No description provided.