Fix #32468: 3d view texture paint mode did not show uv layout in image editor.